--- a/source/_footer.html
+++ b/source/_footer.html
@@ -1,3 +1,207 @@
 <footer>
+  <div class="container">
+    <div class="footer">
+      <ul class="footer-inner">
 
+        <li class="footer-inner__item">
+          <h4 class="footer-inner__title">
+            о компании
+          </h4>
+
+          <ul class="footer-inner__list">
+            <li>
+              <a href="#">
+                Контакты
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                Команда
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                Фото клуба
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                Правила посещения
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                Политика конфиденциальности
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                Официальная оферта
+              </a>
+            </li>
+
+          </ul>
+        </li>
+
+        <li class="footer-inner__item">
+          <h4 class="footer-inner__title">
+            Услуги
+          </h4>
+
+          <ul class="footer-inner__list">
+            <li>
+              <a href="#">
+                Тренажерный зал
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                CrossFit
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                Кардио Зона
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                Групповые тренировки
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                Сайкл
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                Персональный тренинг
+              </a>
+            </li>
+
+          </ul>
+        </li>
+
+        <li class="footer-inner__item">
+          <h4 class="footer-inner__title">
+            информация
+          </h4>
+
+          <ul class="footer-inner__list">
+            <li>
+              <a href="#">
+                Расписание
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                Абонементы
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                Публикации
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                Корпоративный фитнес
+              </a>
+            </li>
+          </ul>
+        </li>
+
+        <li class="footer-inner__item">
+          <ul class="footer-contact">
+            <li class="footer-contact__item">
+              <address>
+                <span>
+                  Адрес: Набережные Челны, ул. Советская 17
+                </span>
+              </address>
+            </li>
+
+            <li class="footer-contact__item">
+              <a href="mailto:Info@avanta.fit">Info@avanta.fit</a>
+            </li>
+
+            <li class="footer-contact__item">
+              <a class="tell-number" href="tel:88128449549">
+                <span>
+                  8 (812) 844-95-49
+                </span>
+              </a>
+
+              <a href="#">
+                <svg width='28' height='28'>
+                  <use href='img/sprite/sprite.svg#whatsapp'></use>
+                </svg>
+              </a>
+              <a href="#">
+                <svg width='26' height='26'>
+                  <use href='img/sprite/sprite.svg#telegram'></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+
+          <button class="footer-inner__btn btn-mono">
+            Заказать звонок
+          </button>
+
+          <ul class="social-list">
+            <li class="social-list__item">
+              <a href="#">
+                <svg width='35' height='35'>
+                  <use href='img/sprite/sprite.svg#vk'></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list__item">
+              <a href="#">
+                <svg width='30' height='30'>
+                  <use href='img/sprite/sprite.svg#facebook'></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list__item">
+              <a href="#">
+                <svg width='29' height='29'>
+                  <use href='img/sprite/sprite.svg#instagram'></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list__item">
+              <a href="#">
+                <svg width='35' height='35'>
+                  <use href='img/sprite/sprite.svg#youtube'></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+
+        </li>
+
+      </ul>
+
+      <p class="privacy">
+        2021 © Все права защищены | Создание и поддержка сайта tatnet.pro
+      </p>
+
+    </div>
+  </div>
 </footer>
