--- a/source/_head.html
+++ b/source/_head.html
@@ -12,7 +12,7 @@
   <link rel="preload" href="fonts/Montserrat-Medium.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/Montserrat-SemiBold.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/Montserrat-Bold.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="fonts/montserratblack.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/Montserrat-Black.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/ProximaNovaCond-Regular.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/ProximaNovaCond-Semibold.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/ProximaNova-Bold.woff2" as="font" crossorigin="anonymous">
