add responsive styles

--- a/source/_header.html
+++ b/source/_header.html
@@ -3,7 +3,7 @@
     <div class="header">
       <a href="index.html" class="header-logo">
         <picture>
-          <source media="(max-width: 575px)" srcset="img/sprite/logo.svg">
+          <source media="(max-width: 1200px)" srcset="img/mobile-logo.svg">
           <img width="309" height="57" src='img/sprite/logo.svg' alt='Логотип'>
         </picture>
       </a>
@@ -61,6 +61,12 @@
         </button>
 
       </div>
+
+      <button class="mobile-btn">
+        <svg width="27" height="16">
+          <use href='img/sprite/sprite.svg#burger'></use>
+        </svg>
+      </button>
 
     </div>
   </div>
