--- a/source/index.html
+++ b/source/index.html
@@ -30,8 +30,8 @@
 
               <div class="first-slider__image">
                 <picture>
-                  <source type='image/webp' media='(max-width: 575px)' srcset='img/.webp'>
-                  <source media='(max-width: 575px)' srcset='img/.png'>
+                  <source type='image/webp' media='(max-width: 992px)' srcset='img/first-slider/img-mob.webp'>
+                  <source media='(max-width: 992px)' srcset='img/first-slider/img-mob.png'>
                   <source type='image/webp' srcset='img/first-slider/img.webp'>
                   <img width='1050' height='800' src='img/first-slider/img.png' alt='image'>
                 </picture>
@@ -59,8 +59,8 @@
 
               <div class="first-slider__image">
                 <picture>
-                  <source type='image/webp' media='(max-width: 575px)' srcset='img/.webp'>
-                  <source media='(max-width: 575px)' srcset='img/.png'>
+                  <source type='image/webp' media='(max-width: 992px)' srcset='img/first-slider/img2-mob.webp'>
+                  <source media='(max-width: 992px)' srcset='img/first-slider/img2-mob.png'>
                   <source type='image/webp' srcset='img/first-slider/img2.webp'>
                   <img width='915' height='830' src='img/first-slider/img2.png' alt='image'>
                 </picture>
@@ -89,8 +89,8 @@
 
               <div class="first-slider__image">
                 <picture>
-                  <source type='image/webp' media='(max-width: 575px)' srcset='img/.webp'>
-                  <source media='(max-width: 575px)' srcset='img/.png'>
+                  <source type='image/webp' media='(max-width: 992px)' srcset='img/first-slider/img3-mob.webp'>
+                  <source media='(max-width: 992px)' srcset='img/first-slider/img3-mob.png'>
                   <source type='image/webp' srcset='img/first-slider/img3.webp'>
                   <img width='915' height='830' src='img/first-slider/img3.png' alt='image'>
                 </picture>
@@ -119,8 +119,8 @@
 
               <div class="first-slider__image">
                 <picture>
-                  <source type='image/webp' media='(max-width: 575px)' srcset='img/.webp'>
-                  <source media='(max-width: 575px)' srcset='img/.png'>
+                  <source type='image/webp' media='(max-width: 992px)' srcset='img/first-slider/img4-mob.webp'>
+                  <source media='(max-width: 992px)' srcset='img/first-slider/img4-mob.png'>
                   <source type='image/webp' srcset='img/first-slider/img4.webp'>
                   <img width='1218' height='911' src='img/first-slider/img4.png' alt='image'>
                 </picture>
@@ -129,7 +129,7 @@
             </div>
 
           </div>
-
+          <div class="swiper-pagination"></div>
         </div>
 
 
@@ -706,7 +706,7 @@
       <div class="container">
         <div class="main-title">
           <h2>
-            Наша команда
+            Браслеты
           </h2>
 
           <p>
@@ -936,6 +936,9 @@
                 </a>
 
               </div>
+
+
+
             </div>
 
             <a href="#" class="more">
