add mobile menu

--- a/source/_header.html
+++ b/source/_header.html
@@ -62,12 +62,110 @@
 
       </div>
 
-      <button class="mobile-btn">
+      <button class="mobile-btn menu">
         <svg width="27" height="16">
           <use href='img/sprite/sprite.svg#burger'></use>
         </svg>
       </button>
 
     </div>
+
+    <div class="mobile-menu">
+      <ul class="mobile-menu__list">
+        <li class="mobile-menu__item phone-item">
+          <a href="#">
+            <svg width='23' height='23'>
+              <use href='img/sprite/sprite.svg#m4'></use>
+            </svg>
+            Заказать звонок
+          </a>
+        </li>
+
+        <li class="mobile-menu__item">
+          <a href="#">
+            Наша команда
+          </a>
+        </li>
+
+        <li class="mobile-menu__item">
+          <a href="#">
+            Браслеты
+          </a>
+        </li>
+
+        <li class="mobile-menu__item">
+          <a href="#">
+            Расписание
+          </a>
+        </li>
+
+        <li class="mobile-menu__item">
+          <a href="#">
+            Тренажерный зал
+          </a>
+        </li>
+
+        <li class="mobile-menu__item">
+          <a href="#">
+            Crossfit
+          </a>
+        </li>
+
+        <li class="mobile-menu__item">
+          <a href="#">
+            Кардио
+          </a>
+        </li>
+
+        <li class="mobile-menu__item">
+          <a href="#">
+            О компании
+          </a>
+        </li>
+      </ul>
+
+      <div class="mobile-menu__adress">
+        <address>
+          Набережные Челны,
+          ул. Советская 17
+        </address>
+
+        <a class="mobile-tel" href="tel:88128449549">8 (812) 844-95-49</a>
+
+        <ul class="social-list-mobile">
+          <li class="social-list__item">
+            <a href="#">
+              <svg width='19' height='11'>
+                <use href='img/sprite/sprite.svg#s1'></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list__item">
+            <a href="#">
+              <svg width='9' height='17'>
+                <use href='img/sprite/sprite.svg#s2'></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list__item">
+            <a href="#">
+              <svg width='16' height='16'>
+                <use href='img/sprite/sprite.svg#s3'></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list__item">
+            <a href="#">
+              <svg width='19' height='14'>
+                <use href='img/sprite/sprite.svg#s4'></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+
+      </div>
+
+    </div>
+
   </div>
 </header>
