--- a/source/index.html
+++ b/source/index.html
@@ -352,7 +352,7 @@
         <div class="container">
           <div class="paralax-box frouth-sec__title">
             <h2>
-              CrossFIt
+              "Montserrat"
             </h2>
 
             <span>
@@ -961,6 +961,87 @@
          </div>
       </div>
     </section>
+
+
+    <div class="fixed-nav">
+      <ul class="fixed-nav__list">
+        <li>
+          <a href="#">
+            <div>
+              <svg width='30' height='14'>
+                <use href='img/sprite/sprite.svg#m1'></use>
+              </svg>
+            </div>
+
+
+            <span>
+              Браслеты
+            </span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <div>
+              <svg width='23' height='23'>
+                <use href='img/sprite/sprite.svg#m2'></use>
+              </svg>
+            </div>
+
+            <span>
+              Адрес
+            </span>
+          </a>
+        </li>
+      </ul>
+
+      <div class="center">
+        <button class="menu">
+
+          <div>
+            <svg width='32' height='18'>
+              <use href='img/sprite/sprite.svg#menu'></use>
+            </svg>
+
+          </div>
+
+
+          <span>
+            Меню
+          </span>
+        </button>
+      </div>
+      <ul class="fixed-nav__list">
+        <li>
+          <a href="#">
+            <div>
+              <svg width='23' height='23'>
+                <use href='img/sprite/sprite.svg#m3'></use>
+              </svg>
+            </div>
+
+
+            <span>
+              Whatsapp
+            </span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <div>
+              <svg width='23' height='23'>
+                <use href='img/sprite/sprite.svg#m4'></use>
+              </svg>
+            </div>
+
+            <span>
+              Позвонить
+            </span>
+          </a>
+        </li>
+      </ul>
+    </div>
 
 
 
