--- a/source/_header.html
+++ b/source/_header.html
@@ -140,13 +140,13 @@
               </svg>
             </a>
           </li>
-          <li class="social-list__item">
+          <!-- <li class="social-list__item">
             <a href="#">
               <svg width='9' height='17'>
                 <use href='img/sprite/sprite.svg#s2'></use>
               </svg>
             </a>
-          </li>
+          </li> -->
           <li class="social-list__item">
             <a href="#">
               <svg width='16' height='16'>
