--- a/source/index.html
+++ b/source/index.html
@@ -352,7 +352,7 @@
         <div class="container">
           <div class="paralax-box frouth-sec__title">
             <h2>
-              "Montserrat"
+              CrossFit
             </h2>
 
             <span>
