add modal window

--- a/source/_header.html
+++ b/source/_header.html
@@ -50,13 +50,13 @@
           </li>
 
           <li>
-            <a href="#" class="call-back">
+            <button data-modal='call-back' class="call-back">
               Обратный звонок
-            </a>
+            </button>
           </li>
         </ul>
 
-        <button class="header__btn main-btn">
+        <button data-modal='start' class="header__btn main-btn">
           НАЧАТЬ
         </button>
 
@@ -73,7 +73,7 @@
     <div class="mobile-menu">
       <ul class="mobile-menu__list">
         <li class="mobile-menu__item phone-item">
-          <a href="#">
+          <a href="#" data-modal='call-back'>
             <svg width='23' height='23'>
               <use href='img/sprite/sprite.svg#m4'></use>
             </svg>
