--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
                   Скоро открытие нового современного фитнес клуба
                 </p>
 
-                <button class="main-btn first-slider__btn">
+                <button data-modal='start' class="main-btn first-slider__btn">
                   НАЧАТЬ
                 </button>
 
@@ -51,7 +51,7 @@
                   продаж
                 </p>
 
-                <button class="main-btn first-slider__btn">
+                <button data-modal='start' class="main-btn first-slider__btn">
                   НАЧАТЬ
                 </button>
 
@@ -81,7 +81,7 @@
                   абонементов
                 </p>
 
-                <button class="main-btn first-slider__btn">
+                <button data-modal='start' class="main-btn first-slider__btn">
                   НАЧАТЬ
                 </button>
 
@@ -111,7 +111,7 @@
                   до открытия
                 </p>
 
-                <button class="main-btn first-slider__btn">
+                <button data-modal='start' class="main-btn first-slider__btn">
                   НАЧАТЬ
                 </button>
 
@@ -1048,6 +1048,8 @@
 
   </main>
   @@include('_footer.html',{})
+
+  @@include('_modal.html',{})
   <script src="js/swiper.min.js"></script>
   <script src="js/aos.js"></script>
   <script src="js/yt-lazyload.min.js"></script>
